# JabLib

./: .gitignore  CMakeLists.txt  JabLibGroup.groupproj  Makefile  README.md  StdInclude.h
JabLib/: JabStdFunctions.cpp  JabStdFunctions.h
JabLibTest/: JabLibTest.cpp
__history/: modInclude.h.~2~  modInclude.h.~3~  modInclude.h.~4~
forms/: CTemperature.cpp  CTemperature.h  UMain.cpp  UMain.fmx  UMain.h  UMain.vlb
forms/__history/: CTemperature.cpp.~25~  CTemperature.cpp.~26~  CTemperature.cpp.~27~  CTemperature.cpp.~28~  CTemperature.cpp.~29~  CTemperature.cpp.~30~  CTemperature.cpp.~31~  CTemperature.cpp.~32~  CTemperature.cpp.~33~  CTemperature.cpp.~34~  CTemperature.cpp.~59~  CTemperature.cpp.~61~  CTemperature.cpp.~62~  CTemperature.cpp.~64~  CTemperature.h.~14~  CTemperature.h.~18~  CTemperature.h.~2~  CTemperature.h.~3~  CTemperature.h.~5~  CTemperature.h.~6~  CTemperature.h.~7~  UMain.cpp.~140~  UMain.cpp.~142~  UMain.cpp.~143~  UMain.cpp.~144~  UMain.cpp.~145~  UMain.cpp.~146~  UMain.cpp.~147~  UMain.cpp.~148~  UMain.cpp.~149~  UMain.cpp.~150~  UMain.cpp.~196~  UMain.cpp.~197~  UMain.cpp.~198~  UMain.cpp.~199~  UMain.cpp.~200~  UMain.cpp.~201~  UMain.cpp.~202~  UMain.cpp.~203~  UMain.cpp.~205~  (+50 more)
include/: JabMath.h  JabStdFunctions.h  StdInclude.h  astar.h  dfs.h  game.h  line.h  maze.h  rect.h
include/objects/: line.h  point.h
include/text/: info.h
module/: TCommonRoutines.cpp  TCommonRoutines.h  TTemperature.cpp  modInclude.h
module/__history/: TCommonRoutines.cpp.~15~  TCommonRoutines.cpp.~16~  TCommonRoutines.cpp.~17~  TCommonRoutines.cpp.~18~  TCommonRoutines.cpp.~19~  TCommonRoutines.cpp.~20~  TCommonRoutines.cpp.~21~  TCommonRoutines.cpp.~22~  TCommonRoutines.cpp.~24~  TCommonRoutines.cpp.~2~  TCommonRoutines.h.~12~  TCommonRoutines.h.~13~  TCommonRoutines.h.~14~  TCommonRoutines.h.~2~  TCommonRoutines.h.~6~  TCommonRoutines.h.~7~  TCommonRoutines.h.~8~  TCommonRoutines.h.~9~  TTemperature.cpp.~10~  TTemperature.cpp.~11~  TTemperature.cpp.~12~  TTemperature.cpp.~13~  TTemperature.cpp.~14~  TTemperature.cpp.~16~  TTemperature.cpp.~1~  TTemperature.cpp.~2~  TTemperature.cpp.~7~  TTemperature.cpp.~8~  TTemperature.h.~1~  TTemperature.h.~2~  (+11 more)
source/: JabStdFunctions.cpp
src/: JabMath.cpp  JabStdFunctions.cpp  astar.cpp  dfs.cpp  game.cpp  line.cpp  main.cpp  maze.cpp  point.cpp  rect.cpp
test/: JabLibTest.cpp  JabLibTest.h
(+60 files in other folders)
